--- a/gitquotes.html
+++ b/gitquotes.html
@@ -138,8 +138,8 @@
 			</tr>
 			<tr>
 				<td>LE</td>
-				<td>SN-xx</td>
-				<td>LE git pun</td>
+				<td>SN-73</td>
+				<td>"Begun, the Clone wars have." - Open-Source Yoda</td>
 			</tr>
 			<tr>
 				<td>EE</td>
