Added lines of code

--- a/gitquotes.html
+++ b/gitquotes.html
@@ -221,6 +221,11 @@
 				<td>SN-xx</td>
 				<td>NY git pun</td>
 			</tr>
+						<tr>
+				<td>RY</td>
+				<td>SL-xx</td>
+				<td>Ryan was here</td>
+			</tr>
 		</table>
 		</p>
     </div>
