--- a/gitquotes.html
+++ b/gitquotes.html
@@ -139,7 +139,7 @@
 			<tr>
 				<td>LE</td>
 				<td>SN-73</td>
-				<td>"Begun, the Clone wars have." - Open-Source Yoda</td>
+				<td style="color: lime; font-size:4em; font-family:comic sans ms">"Begun, the Clone wars have." - Open-Source Yoda</td>
 			</tr>
 			<tr>
 				<td>EE</td>
