--- a/gitquotes.html
+++ b/gitquotes.html
@@ -118,8 +118,8 @@
 			</tr>
 			<tr>
 				<td>WS</td>
-				<td>SN-xx</td>
-				<td>WS git pun</td>
+				<td>SN-50</td>
+				<td>Not very good git.</td>
 			</tr>
 			<tr>
 				<td>JC</td>
