Added my quote to the page.

--- a/gitquotes.html
+++ b/gitquotes.html
@@ -103,8 +103,8 @@
 		<table>
 			<tr>
 				<td>KB</td>
-				<td>SN-90</td>
-				<td>Git gud.</td>
+				<td>SN-99</td>
+				<td>Git like, really really gud.</td>
 			</tr>
 			<tr>
 				<td>AB</td>
