--- a/gitquotes.html
+++ b/gitquotes.html
@@ -208,8 +208,8 @@
 			</tr>
 			<tr>
 				<td>TT</td>
-				<td>SN-xx</td>
-				<td>TT git pun</td>
+				<td>>:C</td>
+				<td>TT <b>go fork yourself!</b></td>
 			</tr>
 			<tr>
 				<td>JT</td>
