--- a/gitquotes.html
+++ b/gitquotes.html
@@ -198,8 +198,8 @@
 			</tr>
 			<tr>
 				<td>FR</td>
-				<td>SN-xx</td>
-				<td>FR git pun</td>
+				<td>SN-27</td>
+				<td>FR git git, NOW.</td>
 			</tr>
 			<tr>
 				<td>RS</td>
