Changed html GR - Gabriel Rodrigues

--- a/gitquotes.html
+++ b/gitquotes.html
@@ -193,8 +193,8 @@
 			</tr>
 			<tr>
 				<td>GR</td>
-				<td>SN-xx</td>
-				<td>GR git pun</td>
+				<td>SN-55</td>
+				<td>GR git pun I don't know</td>
 			</tr>
 			<tr>
 				<td>FR</td>
