--- a/gitquotes.html
+++ b/gitquotes.html
@@ -199,7 +199,7 @@
 			<tr>
 				<td>FR</td>
 				<td>SN-27</td>
-				<td>FR git git, NOW.</td>
+				<td>git gud, NOW.</td>
 			</tr>
 			<tr>
 				<td>RS</td>
