--- a/gitquotes.html
+++ b/gitquotes.html
@@ -153,8 +153,8 @@
 			</tr>
 			<tr>
 				<td>AH</td>
-				<td>SN-xx</td>
-				<td>AH git pun</td>
+				<td>SN-01</td>
+				<td>Go git em.</td>
 			</tr>
 			<tr>
                 <td>JH</td>
