--- a/gitquotes.html
+++ b/gitquotes.html
@@ -218,8 +218,8 @@
 			</tr>
 			<tr>
 				<td>NY</td>
-				<td>SN-xx</td>
-				<td>NY git pun</td>
+				<td>SN-54</td>
+				<td>Git along little doggies.</td>
 			</tr>
 		</table>
 		</p>
