added a quote from a movie I like

--- a/gitquotes.html
+++ b/gitquotes.html
@@ -129,7 +129,7 @@
 			<tr>
 				<td>SC</td>
 				<td>SN-xx</td>
-				<td>SC git pun</td>
+				<td>That's a Bingo!</td>
 			</tr>
 			<tr>
 				<td>TD</td>
