--- a/gitquotes.html
+++ b/gitquotes.html
@@ -158,8 +158,11 @@
 			</tr>
 			<tr>
                 <td>JH</td>
-				<td>SN-xx</td>
-                <td>JH</td>
+				<td>SN-34</td>
+                <td>JH git pun
+					Making jokes about Git is not easy
+					You have to really commit and push.
+				</td>
 			</tr>
 			<tr>
 				<td>JJ</td>
