--- a/gitquotes.html
+++ b/gitquotes.html
@@ -224,7 +224,7 @@
 						<tr>
 				<td>RY</td>
 				<td>SL-xx</td>
-				<td>Ryan was here...</td>
+				<td>Git to da choppa!</td>
 			</tr>
 		</table>
 		</p>
